--- a/index.html
+++ b/index.html
@@ -249,8 +249,13 @@
   <script>
     const hamburger = document.querySelector(".hamburger");
     const menu = document.querySelector(".right-side");
+    const screenWidth = document.documentElement.clientWidth;
 
+    if (screenWidth > 500) {
+      menu.classList.remove("show-menu")
+    }
     hamburger.addEventListener("click", () => menu.classList.toggle("show-menu"))
+
   </script>
 </body>
 </html>
