--- a/index.html
+++ b/index.html
@@ -249,13 +249,14 @@
   <script>
     const hamburger = document.querySelector(".hamburger");
     const menu = document.querySelector(".right-side");
-    const screenWidth = window.innerWidth;
 
-    if (screenWidth > 334) {
-      menu.classList.remove("show-menu")
-    }
+    window.addEventListener("resize", () => {
+      if (screen.width > 700) {
+        menu.classList.remove("show-menu")
+      }
+      
+    })
     hamburger.addEventListener("click", () => menu.classList.toggle("show-menu"))
-
   </script>
 </body>
 </html>
